--- a/apps/browser/src/autofill/overlay/pages/button/button.html
+++ b/apps/browser/src/autofill/overlay/pages/button/button.html
@@ -4,7 +4,7 @@
     <title>Bitwarden overlay button</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="color-scheme" content="normal" />
+    <meta name="color-scheme" content="light dark" />
   </head>
   <body>
     <autofill-overlay-button></autofill-overlay-button>
