--- a/apps/web/src/connectors/duo-redirect.html
+++ b/apps/web/src/connectors/duo-redirect.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class="theme_light">
   <head>
     <meta charset="utf-8" />
     <meta
@@ -7,11 +7,25 @@
       content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width"
     />
     <meta
-      http-equiv="Content-Security-Policy"
       content="default-src 'self'; child-src 'self' https://*.duosecurity.com https://*.duofederal.com; frame-src 'self' https://*.duosecurity.com https://*.duofederal.com;"
     />
     <title>Bitwarden Duo Redirect Connector</title>
   </head>
 
-  <body></body>
+  <body class="layout_frontend">
+    <div class="mt-5 d-flex justify-content-center">
+      <div>
+        <img src="../images/logo-dark@2x.png" class="mb-4 logo" alt="Bitwarden" />
+        <div id="content">
+          <p class="text-center">
+            <i
+              class="bwi bwi-spinner bwi-spin bwi-2x text-muted"
+              title="Loading"
+              aria-hidden="true"
+            ></i>
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
