--- a/apps/browser/src/autofill/notification/bar.html
+++ b/apps/browser/src/autofill/notification/bar.html
@@ -8,7 +8,12 @@
   <body>
     <div class="outer-wrapper">
       <div class="logo">
-        <a href="https://vault.bitwarden.com" target="_blank" id="logo-link">
+        <a
+          href="https://vault.bitwarden.com"
+          target="_blank"
+          id="logo-link"
+          rel="noopener noreferrer"
+        >
           <img id="logo" alt="Bitwarden" />
         </a>
       </div>
