--- a/apps/browser/src/autofill/notification/bar.html
+++ b/apps/browser/src/autofill/notification/bar.html
@@ -8,12 +8,7 @@
   <body>
     <div class="outer-wrapper">
       <div class="logo">
-        <a
-          href="https://vault.bitwarden.com"
-          target="_blank"
-          id="logo-link"
-          rel="noopener noreferrer"
-        >
+        <a href="https://vault.bitwarden.com" target="_blank" id="logo-link" rel="noreferrer">
           <img id="logo" alt="Bitwarden" />
         </a>
       </div>
